--- a/src/components/Homepage/Carousel/index.astro
+++ b/src/components/Homepage/Carousel/index.astro
@@ -16,15 +16,16 @@ import PauseController from "./PauseController";
             type="text"
             message="Developers! Developers! Developers!"
             source="sb@microsoft.com"
-            bottomWidth={5.5}
+            bottomWidthRem={4.4}
+            paddingRem={1.25}
           />
           <CarouselItem
             type="image"
             source="xkcd.com"
             imageSrc={xkcdImage}
             imageAlt="XKCD comic"
-            bottomWidth={2.2}
-            padding={1}
+            bottomWidthRem={2.2}
+            paddingRem={1}
           />
           <CarouselItem type="text" message="You shall not pass!" source="gandalf@ring.company" />
           <CarouselItem
@@ -32,8 +33,8 @@ import PauseController from "./PauseController";
             source="spotify.com"
             imageSrc={audioGif}
             imageAlt="XKCD comic"
-            bottomWidth={2.2}
-            padding={1}
+            bottomWidthRem={2.2}
+            paddingRem={1}
           />
           <CarouselItem type="text" message="Rrrruuuurrr" source="chewbacca@kashyyyk.space" />
           <CarouselItem
@@ -41,8 +42,8 @@ import PauseController from "./PauseController";
             source="bbc.com"
             imageSrc={codeSnippetImage}
             imageAlt="BBC News"
-            bottomWidth={4.8}
-            padding={1}
+            bottomWidthRem={4.8}
+            paddingRem={1}
           />
           <CarouselItem type="text" message="Winter is coming" source="jon@nightswatch.mil" />
         </div>
