--- a/src/components/Homepage/Hero.astro
+++ b/src/components/Homepage/Hero.astro
@@ -1,6 +1,6 @@
 ---
 import { Image } from "astro:assets";
-import Carousel from "./Carousel/Index";
+import Carousel from "./Carousel";
 import patternSvg from "../../assets/images/pattern.svg";
 ---
 
