--- a/src/components/Homepage/Benefits.astro
+++ b/src/components/Homepage/Benefits.astro
@@ -9,7 +9,7 @@ const CheckIcon = `<div class="w-6 h-6 text-green-400 shrink-0">${checkmarkIcon}
     class="flex flex-col md:flex-row justify-between items-start md:gap-16 gap-8 max-w-6xl mx-auto"
   >
     <div class="max-w-sm">
-      <h2 class="text-3xl text-white sm:text-4xl md:text-6xl">Key benefits</h2>
+      <h2 class="text-3xl text-white sm:text-4xl md:text-6xl">Key features</h2>
     </div>
 
     <ul class="space-y-8 text-sm md:text-lg">
