Refine wording in HowItWorks component for clarity

--- a/src/components/Homepage/HowItWorks.astro
+++ b/src/components/Homepage/HowItWorks.astro
@@ -11,9 +11,9 @@ import CtaButton from "../CtaButton.astro";
 
     <div class="space-y-6 text-gray-300">
       <p>
-        VeraId combines DNSSEC with a new Public Key Infrastructure (PKI) to produce digital
-        signatures that can be linked to a domain name. Consequently, every signature contains
-        enough data to be independently verified without external queries, such as DNS lookups.
+        VeraId combines DNSSEC with a new Public Key Infrastructure (PKI) to produce signatures that
+        can be linked to a domain name. Every signature contains enough data to be independently
+        verified without external queries, like DNS lookups.
       </p>
 
       <p>
