Convert TopNav component to a React component
- Bump versions for @astrojs/mdx, @astrojs/react, and astro in package.json and package-lock.json
- Introduce TopNav component for navigation with mobile support
- Add veraid logo image for branding in the TopNav component
- Update Skeleton layout to use TopNav as a React component

--- a/src/layouts/Skeleton.astro
+++ b/src/layouts/Skeleton.astro
@@ -1,5 +1,5 @@
 ---
-import TopNav from "../components/TopNav.astro";
+import TopNav from "../components/TopNav.tsx";
 import Footer from "../components/Footer.astro";
 import OpenGraph from "../assets/images/opengraph.png";
 import "../styles/global.css";
@@ -57,7 +57,7 @@ const ogUrl = new URL(Astro.url.pathname, siteUrl);
     }
   </head>
   <body>
-    <TopNav />
+    <TopNav client:load />
     <slot />
     <Footer />
   </body>
