--- a/src/layouts/Skeleton.astro
+++ b/src/layouts/Skeleton.astro
@@ -1,5 +1,5 @@
 ---
-import TopNav from "../components/TopNav.tsx";
+import TopNav from "../components/TopNav/TopNav";
 import Footer from "../components/Footer.astro";
 import OpenGraph from "../assets/images/opengraph.png";
 import "../styles/global.css";
