--- a/src/pages/kliento/index.astro
+++ b/src/pages/kliento/index.astro
@@ -1,11 +1,8 @@
 ---
-import Layout from "../layouts/Skeleton.astro";
+import Layout from "../../layouts/Skeleton.astro";
 ---
 
-<Layout
-  title="User- and developer-friendly authentication based on DNS"
-  description="VeraId is a decentralised, user-friendly, offline-first authentication protocol powered by DNS"
->
+<Layout title="Kliento" description="Kliento">
   <section class="py-16">
     <div class="px-4 mx-auto max-w-5xl sm:px-6 lg:px-8">
       <h1 class="mb-4 text-6xl font-bold text-center leading-tight">
