--- a/src/pages/kliento/index.astro
+++ b/src/pages/kliento/index.astro
@@ -1,8 +1,8 @@
 ---
-import ServicePage from "../../layouts/ServicePage.astro";
+import ServiceNavLayout from "../../layouts/ServiceNav.astro";
 ---
 
-<ServicePage title="Kliento" description="Kliento" service="Kliento">
+<ServiceNavLayout title="Kliento" description="Kliento" service="Kliento">
   <section class="py-16">
     <div class="px-4 mx-auto max-w-5xl sm:px-6 lg:px-8">
       <h1 class="mb-4 text-6xl font-bold text-center leading-tight">
@@ -10,4 +10,4 @@ import ServicePage from "../../layouts/ServicePage.astro";
       </h1>
     </div>
   </section>
-</ServicePage>
+</ServiceNavLayout>
