Update font size in Skeleton layout and adjust SecondaryNav for mobile menu toggle

--- a/src/layouts/Skeleton.astro
+++ b/src/layouts/Skeleton.astro
@@ -81,11 +81,10 @@ const ogUrl = new URL(Astro.url.pathname, siteUrl);
   html,
   body {
     background-color: #000000;
-    overflow-x: hidden;
     width: 100%;
     color: #d4d4d4;
     font-family: "JetBrainsMono";
-    font-size: 20px;
+    font-size: 1.25rem;
   }
   h1,
   h2,
