Clean up navigation hooks in PrimaryNav and SecondaryNav

--- a/src/components/Homepage/Hero.astro
+++ b/src/components/Homepage/Hero.astro
@@ -19,7 +19,7 @@ import patternSvg from "../../assets/images/pattern.svg";
       >
         Securely attribute content to domain names
       </h1>
-      <p class="text-md sm:text-xl md:text-2xl text-neutral-300 mx-auto max-w-4xl">
+      <p class="text-base sm:text-xl md:text-2xl text-neutral-300 mx-auto max-w-4xl">
         VeraId is a decentralised, user-friendly, offline-first authentication protocol.
       </p>
       <Carousel client:load />
