--- a/src/pages/kliento/index.astro
+++ b/src/pages/kliento/index.astro
@@ -1,8 +1,8 @@
 ---
-import ServiceNavLayout from "../../layouts/ServiceNav.astro";
+import KlientoPage from "../../layouts/KlientoPage.astro";
 ---
 
-<ServiceNavLayout title="Kliento" description="Kliento" service="Kliento">
+<KlientoPage title="Kliento" description="Kliento">
   <section class="py-16">
     <div class="px-4 mx-auto max-w-5xl sm:px-6 lg:px-8">
       <h1 class="mb-4 text-6xl font-bold text-center leading-tight">
@@ -10,4 +10,4 @@ import ServiceNavLayout from "../../layouts/ServiceNav.astro";
       </h1>
     </div>
   </section>
-</ServiceNavLayout>
+</KlientoPage>
