--- a/src/layouts/KlientoPage.astro
+++ b/src/layouts/KlientoPage.astro
@@ -4,7 +4,7 @@ import Page from "./Page.astro";
 import klientoLogo from "../assets/images/kliento-logo.png";
 ---
 
-<Page {...Astro.props}>
+<Page {...Astro.props} showBrandInTitle={false}>
   <SecondaryNav client:load servicePath="kliento" logoSrc={klientoLogo.src} slot="kliento-header" />
   <slot />
 </Page>
