--- a/src/layouts/Skeleton.astro
+++ b/src/layouts/Skeleton.astro
@@ -11,9 +11,16 @@ interface Props {
   description: string;
   ogImage?: string;
   ogType?: string;
+  showBrandInTitle?: boolean;
 }
 
-const { title, description, ogImage = OpenGraph.src, ogType = "website" } = Astro.props;
+const {
+  title,
+  description,
+  ogImage = OpenGraph.src,
+  ogType = "website",
+  showBrandInTitle = true,
+} = Astro.props;
 
 const siteUrl = getSiteUrl(Astro.url);
 const ogImageUrl = new URL(ogImage, siteUrl);
@@ -49,7 +56,7 @@ const ogUrl = new URL(Astro.url.pathname, siteUrl);
       rel="stylesheet"
     />
 
-    <title>{`${title} | VeraId`}</title>
+    <title>{showBrandInTitle ? `${title} | VeraId` : title}</title>
 
     {
       IS_PRODUCTION && (
