--- a/src/layouts/KlientoPage.astro
+++ b/src/layouts/KlientoPage.astro
@@ -5,6 +5,11 @@ import klientoLogo from "../assets/images/kliento-logo.png";
 ---
 
 <Page {...Astro.props} showBrandInTitle={false}>
-  <SecondaryNav client:load servicePath="kliento" logoSrc={klientoLogo.src} slot="kliento-header" />
+  <SecondaryNav
+    client:load
+    servicePath="/kliento"
+    logoSrc={klientoLogo.src}
+    slot="kliento-header"
+  />
   <slot />
 </Page>
