Enhance CodeTabsReact with responsive font size adjustment on window resize and update Usage component styles for better responsiveness.

--- a/src/components/KlientoHomepage/Usage.astro
+++ b/src/components/KlientoHomepage/Usage.astro
@@ -3,8 +3,8 @@ import TabbedCodeSnippet from "../CodeTabsReact.tsx";
 import TwoColumnSection from "../TwoColumn.astro";
 import CtaButton from "../CtaButton.astro";
 
-const HEADING_CLASS = "text-4xl text-white font-bold mb-4";
-const PARAGRAPH_CLASS = "text-lg mb-8";
+const HEADING_CLASS = "text-2xl md:text-4xl text-white font-bold mb-4";
+const PARAGRAPH_CLASS = "text-sm md:text-lg mb-8";
 ---
 
 <TwoColumnSection padding="pb-0">
