--- a/src/components/CtaButton.astro
+++ b/src/components/CtaButton.astro
@@ -11,6 +11,8 @@ const styles = {
   primaryVeraid: "bg-green-400 hover:bg-green-300 text-black",
   secondaryVeraid: "bg-transparent hover:bg-green-400/10 text-green-400 border border-green-400",
   primaryKliento: "bg-indigo-400 hover:bg-indigo-300 text-black",
+  secondaryKliento:
+    "bg-transparent hover:bg-indigo-400/10 text-indigo-400 border border-indigo-400",
 };
 ---
 
