--- a/src/components/Homepage/HowItWorks.astro
+++ b/src/components/Homepage/HowItWorks.astro
@@ -32,7 +32,7 @@ import CtaButton from "../CtaButton.astro";
 
       <div class="flex flex-col md:flex-row justify-center items-center pt-4 gap-4 text-center">
         <CtaButton href="/overview" text="Read technical overview" />
-        <CtaButton href="/demo" text="Try demo" variant="secondary" />
+        <CtaButton href="/demo" text="Try demo" variant="secondaryVeraid" />
       </div>
     </div>
   </div>
