--- a/src/components/CodeTabs.astro
+++ b/src/components/CodeTabs.astro
@@ -3,27 +3,13 @@ import TabbedCodeSnippet, { type TabGroup } from "./CodeTabsReact.tsx";
 
 interface Props {
   tabs: TabGroup[];
-  defaultProvider?: string;
-  defaultLanguage?: string;
   showProviderTabs?: boolean;
   class?: string;
 }
 
-const {
-  tabs,
-  defaultProvider,
-  defaultLanguage,
-  showProviderTabs = true,
-  class: className,
-} = Astro.props;
+const { tabs, showProviderTabs = true, class: className } = Astro.props;
 ---
 
 <div class={className}>
-  <TabbedCodeSnippet
-    tabs={tabs}
-    defaultProvider={defaultProvider}
-    defaultLanguage={defaultLanguage}
-    showProviderTabs={showProviderTabs}
-    client:load
-  />
+  <TabbedCodeSnippet tabs={tabs} showProviderTabs={showProviderTabs} client:load />
 </div>
